# KemoCo.air

./: .gitignore  .python-version  AGENTS.md  llm.txt  pyproject.toml
.codebuddy/memory/: MEMORY.md
.github/: copilot-instructions.md
kemoco/: KemoColiseum.py  __init__.py  config.py  globals.py  grid_extractor.py  overlay.py  remove_titlebar.py
