[project]
name = "kemoco-air"
version = "0.1.0"
description = "KemoColiseum ESP grid scanner & overlay"
requires-python = ">=3.10,<3.15"
dependencies = [
    "airtest>=1.4.3",
    "raylib-py>=5.5",
]

[project.scripts]
kemo = "kemoco.KemoColiseum:main"

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["kemoco*"]
exclude = ["log", "log.*"]
